Cleanup jvmArgs